# shrimple-telegram

./: Cargo.toml  LICENSE  rustfmt.toml
shrimple-telegram/: Cargo.toml
shrimple-telegram-proc-macro/: Cargo.toml
shrimple-telegram-proc-macro/src/: lib.rs  request.rs  type.rs  utils.rs
shrimple-telegram/src/: lib.rs  methods.rs  types.rs
