[package]
name = "shrimple-telegram-proc-macro"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Implementation detail of shrimple-telegram. Do not use directly"
repository = "https://github.com/its-the-shrimp/shrimple-telegram"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote_into = "0.2"
syn = { version = "1", features = ["full"] }
