[package]
name = "shrimple-telegram"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for shrimply running a Telegram bot"
repository = "https://github.com/its-the-shrimp/shrimple-telegram"

[dependencies]
bytes = "1.10.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
tokio-util = { version = "0.7", features = ["io"] }
shrimple-telegram-proc-macro = { path = "../shrimple-telegram-proc-macro" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt"] }
