[package]
name = "shrimple-telegram"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "A library for shrimply running a Telegram bot"
repository = "https://github.com/its-the-shrimp/shrimple-telegram"

[dependencies]
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
tokio-util = { version = "0.7", features = ["io"] }
shrimple-telegram-proc-macro = "0.0.3"
